--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,20 +1,17 @@
 <%= render 'home/header'%>
-<div class="container">
+<div class="container mt-2">
   <main>
-
     <div class="row g-5 ">
       <div class="col-md-5 col-lg-4 order-md-last">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
-          <span class="text-primary">Your cart</span>
+          <span class="text-primary">Mặt hàng cần thanh toán</span>
           <span class="badge bg-primary rounded-pill"><%= @current_cart.order_details.size %></span>
         </h4>
-
         <ul class="list-group mb-3">
           <% @cart.order_details.each do |order_detail| %>
           <li class="list-group-item d-flex justify-content-between lh-sm">
             <div>
               <h6 class="my-0"><%= order_detail.product.name %></h6>
-
             </div>
             <span class="text-muted"><%= order_detail.product.price %></span>
             <span class="text-muted"><%= order_detail.quantity %></span>
@@ -28,13 +25,10 @@
             <span class="text-success">−$5</span>
           </li> %>
           <li class="list-group-item d-flex justify-content-between">
-            <span>Total (USD)</span>
+            <span>Tổng tiền (USD)</span>
             <strong><%= @current_cart.sub_total %></strong>
           </li>
         </ul>
-
-
-
         <%# <form class="card p-2">
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Promo code">
@@ -43,99 +37,18 @@
         </form> %>
       </div>
       <div class="col-md-7 col-lg-8">
-        <h4 class="mb-3">Billing address</h4>
-        <%# <%= form_for @order do |f| %> 
-          <%# <div class="row g-3"> %>
-            <%# <div class="col-sm-6">
-                <label for="firstName" class="form-label">First name</label>
-                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                <div class="invalid-feedback">
-                  Valid first name is required.
-                </div>
-              </div> %>
-
-            <%# <div class="col-sm-6">
-                <label for="lastName" class="form-label">Last name</label>
-                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                <div class="invalid-feedback">
-                  Valid last name is required.
-                </div>
-              </div> %>
-
-            <%# <div class="col-12">
-                <label for="username" class="form-label">Username</label>
-                <div class="input-group has-validation">
-                  <span class="input-group-text">@</span>
-                  <input type="text" class="form-control" id="username" placeholder="Username" required>
-
-                <div class="invalid-feedback">
-                    Your username is required.
-                  </div>
-                </div>
-              </div> %>
-
-            <%# <div class="col-12">
-              <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com">
-              <div class="invalid-feedback">
-                Please enter a valid email address for shipping updates.
-              </div>
-            </div> %>
-
-            <%# <div class="col-12">
-              <label for="address" class="form-label">Address</label>
-              <%= f.text_field :address, required: true, autofocus: true,class:"form-control" %>
-              <%# <div class="invalid-feedback">
-                Please enter your shipping address.
-              </div>
-            </div>  %>
-
-          <%# </div> %>
-
-          <%# <hr class="my-4"> %>
-
-          <%# <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="same-address">
-              <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
-            </div>
-            
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="save-info">
-              <label class="form-check-label" for="save-info">Save this information for next time</label>
-            </div> %>
-
-          <%# <hr class="my-4"> %>
-
-          <%# <h4 class="mb-3">Payment</h4> %>
-
-          <%# <div class="my-3">
-              <div class="form-check">
-                <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
-                <label class="form-check-label" for="credit">Credit card</label>
-              </div>
-              <div class="form-check">
-                <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
-                <label class="form-check-label" for="debit">Debit card</label>
-              </div>
-              <div class="form-check">
-                <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
-                <label class="form-check-label" for="paypal">PayPal</label>
-              </div>
-            </div> %>
-
-          <%# <div class="row gy-3">
-
-
-          </div>
-
-          <hr class="my-4">
-          <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button> %>
-
-        <%# <% end %> 
-
-        <%# <%= button_to "sada", check_out_create_path, params:{id: @cart.order_details.first.product[:id]}, remote: true %>
+        <h4 class="mb-3">Bill</h4>
         <%= form_for @order do |order| %>
+        <div class="col-12">
+          <label for="address" class="form-label">Địa chỉ nhận hàng</label>
+          <%= order.text_field :address, required: true, autofocus: true,class:"form-control" %>
+          <%= order.hidden_field :user_id, value: current_user.id  %>
+          <div class="invalid-feedback">
+            Please enter your shipping address.
+          </div>
+          <hr class="my-4">
           <div id="payment-element">
+            <label for="address" class="form-label">Thanh toán</label>
             <div id="card">
               <!-- Elements will create input elements here -->
             </div>
@@ -146,14 +59,16 @@
           <!-- We'll put the error messages in this element -->
           <div id="card-errors" role="alert"></div>
 
-          <%= order.submit "Submit Payment #{@cart.sub_total}" %>
+          <%= order.submit "Đặt hàng #{@cart.sub_total}", class:"btn btn-outline-dark mt-auto border-0", style:"background-color: orange" %>
+        </div>
+
         <% end %>
       </div>
     </div>
   </main>
 </div>
 
-<%= render 'home/footer'%>
+<%= render 'home/footer' %>
 <script>
   const stripe = Stripe(
     "pk_test_51L8JPcIekHnUbT8KJUIoE5Q34nJWFDXoSPSX02SjE9zqtpwK3j957WVucSpEMTacWBYUGGHkRdqxsuf9ZBq6qt0B00kToy2awu");
